--- a/css/custom.css
+++ b/css/custom.css
@@ -120,6 +120,16 @@ h2 {
     width: 40%;
 }
 
+.last-thumb {
+    width: 55px;
+    height: 55px;
+    display: inline-block;
+}
+
+.tweet {
+    font-size: small;
+}
+
 @media screen and (max-width: 768px) {
     .mw-icons {
         max-width: 275px;
