--- a/css/custom.css
+++ b/css/custom.css
@@ -15,24 +15,32 @@
     --bs-card-height-md: 202px;
 }
 
-body {
+* {
+    box-sizing: border-box;
+}
+
+html, body {
     background-color: var(--bs-gray);
     min-width: 460px;
 }
 
-h1, h2, h3 {
+.anton-font, h1, h2, h3 {
     font-family: 'Anton', sans-serif;
+}
+
+h1 {
+    font-size: xxx-large;
+}
+
+h2 {
+    font-size: xx-large;
 }
 
 .abel-font {
     font-family: 'Abel', sans-serif;
 }
 
-.anton-font {
-    font-family: 'Anton', sans-serif;
-}
-
-#logo {
+#wh-logo {
     width: 30px;
     height: 30px;
 }
@@ -50,28 +58,26 @@ h1, h2, h3 {
     justify-content: center;
     margin: 10px;
     font-weight: bold;
-    font-family: 'Anton', sans-serif;
 }
 
-.bg-red {
+.bg-fill:nth-of-type(1) {
     background-color: var(--bs-red);
 }
 
-.bg-orange {
+.bg-fill:nth-of-type(2) {
     background-color: var(--bs-orange);
 }
 
-.bg-green {
+.bg-fill:nth-of-type(3) {
     background-color: var(--bs-green);
 }
 
-.bg-aqua {
+.bg-fill:nth-of-type(4) {
     background-color: var(--bs-aqua);
 }
 
 .img-border-gray {
     border-color: lightgray !important;
-
 }
 
 .card-img {
@@ -82,23 +88,7 @@ h1, h2, h3 {
     height: var(--bs-card-height-sm);
 }
 
-.bg-img-apple {
-    background-image: url("../img/apple-ipad.jpg");
-}
-
-.bg-img-man {
-    background-image: url("../img/man.jpg");
-}
-
-.bg-img-mac {
-    background-image: url("../img/macbook.jpg");
-}
-
-.bg-img-security {
-    background-image: url("../img/security.jpg");
-}
-
-.mw-icons {
+.mw-pill-badge-container {
     max-width: 695px;
 }
 
@@ -108,13 +98,6 @@ h1, h2, h3 {
     margin: .5rem;
 }
 
-h1 {
-    font-size: xxx-large;
-}
-
-h2 {
-    font-size: xx-large;
-}
 
 #main-aside-content {
     width: 40%;
@@ -131,7 +114,7 @@ h2 {
 }
 
 @media screen and (max-width: 768px) {
-    .mw-icons {
+    .mw-pill-badge-container {
         max-width: 275px;
     }
 
@@ -148,7 +131,6 @@ h2 {
 @media screen and (min-width: 768px) {
     .card-expand {
         width: 45%;
-
     }
 
     .card-img {
